# ModifyFGOAlterLily

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/io/github/heqyoufree/modifyfgo_alter_lily/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  LSPosedApi.h  Morgan.cpp  Morgan.h  logging.h
app/src/main/cpp/hooker/: BattleResultRequestHooker.cpp  BattleResultRequestHooker.h  FollowerListRequestHooker.cpp  FollowerListRequestHooker.h  FrameRateHooker.cpp  FrameRateHooker.h  ProtectionHooker.cpp  ProtectionHooker.h  TimeScaleHooker.cpp  TimeScaleHooker.h  TprtHooker.cpp  TprtHooker.h
app/src/main/cpp/il2cpp/: il2cpp-api-functions.h  il2cpp-appdata.h  il2cpp-functions.h  il2cpp-types.h
app/src/main/cpp/utf8/: Il2CppStringConverter.cpp  Il2CppStringConverter.h  core.hpp  unchecked.hpp  utf8.h
app/src/main/java/io/github/heqyoufree/modifyfgo_alter_lily/: MorganHook.kt
app/src/main/java/io/github/heqyoufree/modifyfgo_alter_lily/imgui/: ImGuiView.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/test/java/io/github/heqyoufree/modifyfgo_alter_lily/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
